Fix Two Tones UI filter, enable BroadcastStatusPanel, and fix JmbeCreator Java 26 issue